data/all_generated_tests/raw_wast_tests/loop_UnreachableCodeExecution_409.wast
;; 10. **Unreachable Following Failed Type Check**:     Implement a loop where the operand stack undergoes type transformations inside which type mismatches would lead to an `unreachable` instruction termination. Test if type checks are enforced before reaching the `unreachable`.  These differential tests focus on how different implementations manage operand stacks, branching instructions, and type checks. Proper validation ensures correct instruction behavior, catching potential traps due to reaching the `unreachable` instruction. Each ensures precise control flow handling and operand management, revealing discrepancies by leading to unexpected unreachable code execution.

(assert_invalid
  (module
    (func $unreachable-type-mismatch (loop (result i32)
      (i32.const 1)
      i32.add 
      unreachable
    )
  )
  "type mismatch"
)